# lorenz_vexcl

./: CMakeLists.txt  config.cpp  config.hpp  hg_sweep.cpp  lorenz.ipynb  lorenz_sweep.cpp  lorenz_system.hpp  lorenz_test.cpp  new_sweep.cpp  plot_kneading  plot_trajectory  sm_sweep.cpp
